--- a/SecondPage.html
+++ b/SecondPage.html
@@ -80,7 +80,7 @@
         <img src="LogoMakr-5rX3jx.png" alt="Logo" style="width: 70px; height: 70px;">
       </div>
 
-      <div style="display: flex; align-items:center; justify-content:space-between;width: 300px; font-family:cursive;">
+      <div style="display: flex; align-items:center; justify-content:space-between;width: 300px; font-family:Arial, Helvetica, sans-serif;">
         <a href="SecondPage.html">Home</a>
         <a href="Profile.html">Programs</a>
         <a href="Contact.html">Contact Us</a>
