--- a/SecondPage.html
+++ b/SecondPage.html
@@ -80,9 +80,12 @@
         <img src="LogoMakr-5rX3jx.png" alt="Logo" style="width: 70px; height: 70px;">
       </div>
 
-      <div style="display: flex; align-items:center; justify-content:space-between;width: 300px; font-family:Arial, Helvetica, sans-serif;">
+      <div style="display: flex; align-items:center; justify-content:space-between;width: 600px; font-family:Arial, Helvetica, sans-serif; font-size: 20px;">
         <a href="SecondPage.html">Home</a>
         <a href="Profile.html">Programs</a>
+        <a href="Contact.html">Portal</a>
+        <a href="Contact.html">Reports</a>
+        <a href="Contact.html">Partners</a>
         <a href="Contact.html">Contact Us</a>
       </div>
 
@@ -114,10 +117,6 @@
 
 
    <script>
-      $(function(){
-        alert("Welcome")
-      })
-
       $("#signUpButton").click(function(){
         alert("Button clicked")
       })
