--- a/SecondPage.html
+++ b/SecondPage.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </head>
 
-<body>
+<body style="background-image: kids;">
     <!-- <p style="color:red;border:2px solid grey;padding-left: 300px;">Welcome to my second page</p>
 
     <ul>
