--- a/Profile.html
+++ b/Profile.html
@@ -20,6 +20,18 @@
 
         </ul>
 
+        <div class="media">
+            <div class="media-left">
+              <a href="#">
+                <img class="media-object" src="..." alt="...">
+              </a>
+            </div>
+            <div class="media-body">
+              <h4 class="media-heading">Media heading</h4>
+              ...
+            </div>
+          </div>
+
 
     </body>
 
