--- a/SecondPage.html
+++ b/SecondPage.html
@@ -104,7 +104,13 @@
 
     <h1 style="padding-left: 30px; font-family: cursive;">Welcome to CodeTech Programming<h1>
 
-    <p style="font-size: 25px ; padding-left: 30px;font-family: cursive;">Here in CodeTech, teaching young people how to make their ideas reality is our ultimate goal<br> 
+      <div class="jumbotron">
+        <h1>Hello, world!</h1>
+        <p>...</p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+      </div>
+      
+      <p style="font-size: 25px ; padding-left: 30px;font-family: cursive;">Here in CodeTech, teaching young people how to make their ideas reality is our ultimate goal<br> 
       We do this by investing in our well-trained tutors from all over the world, who not only become teachers 
     to these young ones but partners and family as well.</p>
 
