--- a/Profile.html
+++ b/Profile.html
@@ -21,16 +21,17 @@
         </ul>
 
         <div class="media">
-            <div class="media-left">
-              <a href="#">
-                <img class="media-object" src="..." alt="...">
-              </a>
-            </div>
-            <div class="media-body">
-              <h4 class="media-heading">Media heading</h4>
-              ...
-            </div>
+          <div class="media-left">
+            <a href="#">
+              <img class="media-object" src="robotics.jpg" alt="...">
+            </a>
           </div>
+          <div class="media-body">
+            <h4 class="media-heading">Robotics</h4>
+            <p>We give learners the opportunity to get hands-on experience with hardware components in our Robotics to learn how they work</p>
+            ...
+          </div>
+        </div>
 
 
     </body>
