--- a/Profile.html
+++ b/Profile.html
@@ -5,20 +5,36 @@
     </head>
 
     <body>
+
+      <div style="display: flex; align-items:center;justify-content:space-between;">
+        <div style="padding-left: 30px;">
+          <img src="LogoMakr-5rX3jx.png" alt="Logo" style="width: 70px; height: 70px;">
+        </div>
+  
+        <div style="display: flex; align-items:center; justify-content:space-between;width: 600px; font-family:Arial, Helvetica, sans-serif; font-size: 20px;">
+          <a href="SecondPage.html">Home</a>
+          <a href="Profile.html">Programs</a>
+          <a href="Contact.html">Portal</a>
+          <a href="Contact.html">Reports</a>
+          <a href="Contact.html">Partners</a>
+          <a href="Contact.html">Contact Us</a>
+        </div>
+  
+        <div style="padding-right: 30px;">
+          <button id="signUpButton" class="signUpButton">Sign Up</button>
+        </div>
         <h1>Our Programs</h1>
+
+        <div class="jumbotron">
+          <h1>Hello, world!</h1>
+          <p>...</p>
+          <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+        </div>
 
         <p>We offer a variety of programs for different age groups and levels.</p>
         <p>Programs offered here are;</p>
 
-        <ul>
-            <li>Web development</li>
-            <li>App development</li>
-            <li>Robotics</li>
-            <li>3d modelling</li>
-            <li>Game development</li>
 
-
-        </ul>
 
         <div class="media">
           <div class="media-left">
