--- a/Profile.html
+++ b/Profile.html
@@ -6,7 +6,7 @@
 
     <body>
 
-      <div style="display: flex; align-items:center;justify-content:space-between;">
+    <div style="display: flex; align-items:center;justify-content:space-between;">
         <div style="padding-left: 30px;">
           <img src="LogoMakr-5rX3jx.png" alt="Logo" style="width: 70px; height: 70px;">
         </div>
@@ -24,6 +24,8 @@
           <button id="signUpButton" class="signUpButton">Sign Up</button>
         </div>
         <h1>Our Programs</h1>
+
+        </div>
 
         <div class="jumbotron">
           <h1>Hello, world!</h1>
